...
    <string name="edit_bookmark">Edit bookmark</string>
    <string name="create_bookmark">Create bookmark</string>
    <string name="previous_chapter">Previous chapter</string>
    <string name="timer">Timer</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="chapters">Chapters</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="mark_as_finished">Mark as finished</string>
    <string name="download_incomplete">Download incomplete</string>
    <string name="downloaded">Downloaded</string>
    <string name="no_downloaded_items">No downloaded items.</string>
    <string name="downloaded_filter_on">Downloaded Filter On</string>
...
    <string name="genres">Genres</string>
    <string name="remove_genre">Remove Genre</string>
    <string name="previous_page">Previous page</string>
    <string name="next_page">Next page</string>
    <string name="go_to_page">Go to page</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="schedule">Schedule</string>
    <string name="match">Match</string>
    <string name="info">info</string>
    <!--Content Description-->

    <!--Arguments-->
...
    <string name="client">Client</string>
    <string name="continue_text">Continue</string>
    <string name="configured">Configured</string>
    <string name="not_configured">Not configured</string>
    <string name="back">Back</string>
    <string name="server_could_not_be_reached">The server could not be reached.</string>
    <string name="retry">Retry</string>
    <!--Misc-->

    <!--Backups-->
    <string name="create_backup">Create Backup</string>
    <string name="upload_backup">Upload Backup</string>
    <string name="backup_created">Backup created.</string>
...
    <string name="not_set">Not set</string>
    <string name="unlimited">Unlimited</string>
    <!--Backups-->

    <!--Server Settings-->
    <string name="general">General</string>
    <string name="scanner">Scanner</string>
    <string name="web_client">Web Client</string>
    <string name="cache">Cache</string>
    <string name="store_covers_with_item">Store covers with item</string>
    <string name="store_metadata_with_item">Store metadata with item</string>
    <string name="ignore_prefixes_when_sorting">Ignore prefixes when sorting</string>
    <string name="parse_subtitles">Parse subtitles</string>
...
