...
        LibraryAdminCreateUiState(
          providerState =
            LibraryAdminProviderState.Success(
              listOf(
                LibraryAdminProvider(
                  "audible",
                  "Audible",
                )
              )
            )
        )
    )
  }
...
